# RikkaMQ

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/: renovate.json
.github/workflows/: check.yml  ci.yml
benches/: README.md  enqueue_starvation.rs
docs/: v0.2-redesign-plan.md
examples/: basic.rs  inspector.rs  retry.rs
src/: config.rs  error.rs  handler.rs  info.rs  inspect.rs  lib.rs  mq.rs  worker.rs
src/backend/redis/: builder.rs  inspect.rs  keys.rs  mod.rs  mq.rs  store.rs
src/define/: redis.rs
src/define/redis/: mq.rs
tests/: api_smoke.rs  inspector_redis.rs  retry_redis.rs  store_seam.rs  worker_shutdown.rs
