[package]
name = "rikka-mq"
version = "0.1.1"
edition = "2021"
authors = ["turtton <top.gear7509@turtton.net>"]
license = "MIT"
repository = "https://github.com/turtton/RikkaMQ"
description = "A simple message queue library for Rust."
exclude = [
    ".env*",
    ".git*",
    "flake*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
tracing = ["dep:tracing"]
tokio = ["dep:tokio"]
redis = ["deadpool-redis", "tokio"]

[dependencies]
thiserror = "2.0.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
destructure = "0.5.6"

deadpool-redis = { version = "0.20.0", optional = true, features = ["streams"] }
tracing = { version = "0.1.40", optional = true }
tokio = { version = "1.0.1", optional = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter", "fmt"] }
tokio = { version = "1.0.1", features = ["macros"] }
rand = "0.9.0"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
dotenvy = "0.15.7"
test-with = { version = "0.14.0", default-features = false, features = [] }
