[package]
name = "rikka-mq"
version = "0.2.0-alpha.1"
edition = "2021"
authors = ["turtton <top.gear7509@turtton.net>"]
license = "MIT"
repository = "https://github.com/turtton/RikkaMQ"
description = "A simple message queue library for Rust."
exclude = [
    ".env*",
    ".git*",
    "flake*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
tracing = ["dep:tracing"]
tokio = ["dep:tokio"]
redis = ["deadpool-redis", "tokio"]
examples = [
    "dep:testcontainers",
    "dep:testcontainers-modules",
    "redis",
    "tokio",
    "tracing"
]

[dependencies]
thiserror = "2.0.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
futures = "0.3.31"

deadpool-redis = { version = "0.23.0", optional = true, features = ["streams"] }
tracing = { version = "0.1.40", optional = true }
tokio = { version = "1.0.1", optional = true, features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
testcontainers = { version = "0.27.0", optional = true }
testcontainers-modules = { version = "0.11.6", optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["async_tokio"] }
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter", "fmt"] }
tokio = { version = "1.0.1", features = ["macros", "rt-multi-thread", "sync", "time", "test-util"] }
rand = "0.10.0"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
dotenvy = "0.15.7"
test-with = { version = "0.16.0", default-features = false, features = [] }
testcontainers = "0.27.0"
testcontainers-modules = "0.11.6"

[[example]]
name = "basic"
required-features = ["examples"]

[[example]]
name = "inspector"
required-features = ["examples"]

[[example]]
name = "retry"
required-features = ["examples"]

[[bench]]
name = "enqueue_starvation"
harness = false
required-features = ["redis", "tokio"]
